--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "bull": "^4.10.4",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "pg": "^8.11.5",
+    "axios": "^1.6.8"
+
   }
 }
