--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,11 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
+COPY backend/package.json backend/package-lock.json* ./
 RUN npm install
 
-COPY src ./src
+COPY backend/src ./src
+COPY dashboard ./dashboard
 
 EXPOSE 8000
 
