--- a/backend/Dockerfile.worker
+++ b/backend/Dockerfile.worker
@@ -2,9 +2,10 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
+COPY backend/package.json backend/package-lock.json* ./
 RUN npm install
 
-COPY src ./src
+COPY backend/src ./src
 
-CMD ["node", "src/workers/payment.worker.js"]
+CMD ["node", "src/worker.js"]
+
